Fix profile image not showing issue and friend card css

--- a/src/app/tab4/tab4.page.scss
+++ b/src/app/tab4/tab4.page.scss
@@ -78,6 +78,9 @@ ion-content {
 
     .friend {
       align-items: center;
+      .n-subdiv {
+        display: none;
+      }
       .subdiv {
         background-color: white;
         border: 1px solid #eeeeee;
